--- a/home/.config/git/config
+++ b/home/.config/git/config
@@ -1,7 +1,14 @@
 [user]
 	name = PrimeO7
 	email = nowak.philipp97@gmail.com
+	signingkey = nowak.philipp97@gmail.com
 [init]
 	defaultBranch = main
 [log]
 	date = iso8601-strict
+[commit]
+	gpgSign = true
+[tag]
+	gpgSign = true
+[push]
+	gpgSign = if-asked
