feat(mpv): update config

--- a/home/.config/mpv/mpv.conf
+++ b/home/.config/mpv/mpv.conf
@@ -9,5 +9,15 @@ profile=gpu-hq
 scale=ewa_lanczossharp
 cscale=ewa_lanczossharp
 video-sync=display-resample
-interpolation
+interpolation=yes
 tscale=oversample
+
+# Program Behavior
+ytdl-raw-options=yes-playlist=
+
+[Youtube-4K]
+ytdl-format="bestvideo[height<=2160][vcodec^=av01]+bestaudio/bestvideo[height<=2160]+bestaudio/best"
+interpolation=no
+
+[Youtube-1440p]
+ytdl-format="bestvideo[height<=1440][vcodec^=av01]+bestaudio/bestvideo[height<=1440]+bestaudio/best"
